fix horizontal scroll bug and card flex bug

--- a/my-portfolio/src/app/globals.css
+++ b/my-portfolio/src/app/globals.css
@@ -26,7 +26,7 @@
   :root {
     /** Background colors **/
     /* NOTE: utile le main ? puisque gradient ? */
-    --main-background: #38123d;
+    --main-background: rgb(13, 5, 14);
     --navbar-background: #0d0110;
     --card-background: #0d0110;
     --tile-background: #38123d;
@@ -40,15 +40,6 @@
     --tile-text: #9b87f5;
     --navbar-text: ; /* NOTE: même que ...? */
     --main-text: #dccaf2;
-
-    /* TODO: à suppr */
-    /* 
-    --border-dark: #d946ef;
-    --border-light: #9b87f5;
-    --text-section-title: #600273;
-    --text-dark: #650576;
-    /*--text-grey: #9f7eb0;
-    --text-clear: #b6a7f8;*/
   }
 }
 /* Containers */
@@ -58,7 +49,7 @@ body {
 }
 
 .main-container {
-  @apply w-full mx-auto px-20 py-20 md:pl-85;
+  @apply w-full mx-auto px-20 pt-10 pb-14 md:pl-85;
   background: #38123d;
   background: radial-gradient(
     circle,
@@ -69,16 +60,19 @@ body {
 }
 
 .section-container {
-  @apply mb-30;
+  @apply pt-20;
 }
 
 .stack-container {
-  @apply bg-card_bg pt-3 pb-8 px-5 rounded-2xl border border-main_b basis-1/3 flex flex-col items-center;
+  @apply bg-card_bg pt-3 pb-8 px-5 rounded-2xl border border-main_b flex-1/3 flex flex-col text-center items-center;
+}
+.cardTechno-container {
+  @apply flex flex-row flex-wrap justify-center gap-2;
 }
 
 /* Navbar */
 .navbar {
-  @apply shadow-2xl border-main_b bg-navbar_bg;
+  @apply border-main_b bg-navbar_bg;
 }
 
 /* Text */
@@ -90,5 +84,5 @@ body {
 }
 
 .card-title {
-  @apply text-card_title text-2xl mb-5 font-bold;
+  @apply text-card_title text-3xl mb-5 font-bold;
 }
